--- a/css/main.css
+++ b/css/main.css
@@ -355,7 +355,7 @@
     top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 400px;
+    width: 100%;
     height: 1px;
     background: #dcbe96;
 }
@@ -498,7 +498,7 @@
     top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 400px;
+    width: 100%;
     height: 1px;
     background: #dcbe96;
 }
