--- a/css/hall.css
+++ b/css/hall.css
@@ -123,7 +123,7 @@
 
 .weddingVisual {
     position: relative;
-    background: url(../img/wedding/hall_visual01.jpg) no-repeat center center/cover;
+    background: url(../img/wedding/weddingvisual01.jpg) no-repeat center center/cover;
     height: 55vh;
 }
 
@@ -175,17 +175,21 @@
 
 .wedding_nav .inner a {
     display: block;
+    width: 150px;
+
     padding: 10px 20px;
+
     border-radius: 20px;
     border: 1px solid #ddd;
+
+    background: #fff;
     color: #333;
+
     font-size: 20px;
     font-weight: 100;
+    text-align: center;
 }
 
-* {
-    outline: 1px solid #21c407;
-}
 
 .wedding_nav .inner li:first-child a {
     background: #281e19;
@@ -269,7 +273,7 @@
     font-style: italic;
     font-size: 50px;
     font-weight: 700;
-    line-height: 1.5;
+
     margin: 0 0 30px 0;
 }
 
@@ -278,7 +282,7 @@
     content: "";
     position: absolute;
     display: block;
-    bottom: 0%;
+    bottom: -30%;
     left: 50%;
     transform: translate(-50%, 0);
     width: 100%;
@@ -290,14 +294,24 @@
     content: "";
     display: block;
     position: absolute;
-    display: block;
-    bottom: 0%;
+
+    bottom: -30%;
     left: 50%;
     transform: translate(-50%, 50%) rotate(-45deg);
 
     width: 10px;
     height: 10px;
     background: #dcbe96;
+}
+
+
+.hallContent p {
+    text-align: center;
+
+    font-size: 20px;
+    font-weight: 500;
+    /* line-height: 1.5; */
+    margin: 0 0 30px 0;
 }
 
 .hallContent .inner .hall_slide {
