--- a/css/location.css
+++ b/css/location.css
@@ -123,7 +123,7 @@
 
 .locationVisual {
     position: relative;
-    background: url(../img/location/location_visual01.jpg) no-repeat center center/cover;
+    background: url(../img/wedding/weddingvisual01.jpg) no-repeat center center/cover;
     height: 55vh;
 }
 
@@ -291,7 +291,7 @@
     display: inline-block;
     font-size: 20px;
     font-weight: 500;
-
+    line-height: 30px;
 
 }
 
