--- a/css/other.css
+++ b/css/other.css
@@ -154,7 +154,7 @@
     margin: 0 0 10px 0;
 }
 
-.hallVisual .inner p {
+.weddingVisual .inner p {
     font-size: 30px;
     font-weight: 700;
 }
@@ -192,19 +192,14 @@
 
 
 
-.wedding_nav .inner li:nth-child(2) a {
+.wedding_nav .inner li:nth-child(6) a {
     background: #281e19;
     color: #fff;
     transition: 0.5s;
 }
 
-.wedding_nav .inner li:nth-child(n+3) a:hover,
-.wedding_nav .inner li:nth-child(1) a:hover {
+.wedding_nav .inner li:nth-child(-n+5) a:hover {
     background: #f1f1f1;
-}
-
-.wedding_nav .inner li:nth-child(n+3) a {
-    background: #fff;
 }
 
 .wedding_nav .flex_inner {
@@ -265,9 +260,7 @@
     word-break: keep-all;
 }
 
-.brideContent {}
-
-.brideContent h2 {
+.otherContent h2 {
     position: relative;
 
     font-family: 'Cormorant Upright', serif;
@@ -280,7 +273,7 @@
 }
 
 
-.brideContent h2::before {
+.otherContent h2::before {
     content: "";
     position: absolute;
     display: block;
@@ -292,11 +285,11 @@
     background: #dcbe96;
 }
 
-.brideContent h2::after {
+.otherContent h2::after {
     content: "";
     display: block;
     position: absolute;
-
+    display: block;
     bottom: -30%;
     left: 50%;
     transform: translate(-50%, 50%) rotate(-45deg);
@@ -306,7 +299,7 @@
     background: #dcbe96;
 }
 
-.brideContent p {
+.otherContent p {
     text-align: center;
 
     font-size: 20px;
@@ -315,20 +308,21 @@
     margin: 0 0 30px 0;
 }
 
-.brideContent .inner .bride_slide {
+
+.otherContent .inner .other_slide {
     position: relative;
     width: 100%;
     height: 650px;
     margin: 0 0 30px 0;
 }
 
-.brideContent .inner .bride_slide figure {
+.otherContent .inner .other_slide figure {
     font-size: 0;
 }
 
 
 
-.brideContent .inner .bride_slide .slick-prev {
+.otherContent .inner .other_slide .slick-prev {
     position: absolute;
     top: 50%;
     left: 5%;
@@ -347,7 +341,7 @@
     z-index: 99;
 }
 
-.brideContent .inner .bride_slide .slick-next {
+.otherContent .inner .other_slide .slick-next {
     position: absolute;
     top: 50%;
     right: 5%;
@@ -366,14 +360,14 @@
     z-index: 99;
 }
 
-.brideContent .inner .bride_slide .slick-dots {
+.otherContent .inner .other_slide .slick-dots {
     position: absolute;
     top: 90%;
     left: 50%;
     transform: translate(-50%, 0);
 }
 
-.brideContent .inner .bride_slide .slick-dots li {
+.otherContent .inner .other_slide .slick-dots li {
     display: inline-block;
     margin: 0 10px 0 0;
     border-radius: 50%;
@@ -385,45 +379,49 @@
     cursor: pointer;
 }
 
-.brideContent .inner .bride_slide .slick-dots li:last-child {
+.otherContent .inner .other_slide .slick-dots li:last-child {
     margin: 0;
 }
 
-.brideContent .inner .bride_slide .slick-dots li button {
+.otherContent .inner .other_slide .slick-dots li button {
     display: none;
 }
 
-.brideContent .inner .bride_slide .slick-dots li.slick-active {
+.otherContent .inner .other_slide .slick-dots li.slick-active {
     background: #fff;
 }
 
-.brideContent .inner .bride_slide figure {
+.otherContent .inner .other_slide figure {
     height: 650px;
 }
 
-.brideContent .inner .bride_slide .slide01 {
-    background: url(../img/wedding/bride_slide01.jpg) no-repeat center bottom/cover;
+.otherContent .inner .other_slide .slide01 {
+    background: url(../img/wedding/other_slide01.jpg) no-repeat center bottom/cover;
 
 }
 
-.brideContent .inner .bride_slide .slide02 {
-    background: url(../img/wedding/bride_slide02.jpg) no-repeat center bottom/cover;
+.otherContent .inner .other_slide .slide02 {
+    background: url(../img/wedding/other_slide02.jpg) no-repeat center bottom/cover;
 }
 
-.brideContent .inner .bride_slide .slide03 {
-    background: url(../img/wedding/bride_slide03.jpg) no-repeat center center/cover;
+.otherContent .inner .other_slide .slide03 {
+    background: url(../img/wedding/other_slide03.jpg) no-repeat center center/cover;
 }
 
-.brideContent .inner .bride_slide .slide04 {
-    background: url(../img/wedding/bride_slide04.jpg) no-repeat center center/cover;
+.otherContent .inner .other_slide .slide04 {
+    background: url(../img/wedding/other_slide04.jpg) no-repeat center center/cover;
+}
+
+.otherContent .inner .other_slide .slide05 {
+    background: url(../img/wedding/other_slide05.jpg) no-repeat center center/cover;
 }
 
 
-.brideContent .inner .Wedding_Reservation {
+.otherContent .inner .Wedding_Reservation {
     text-align: center;
 }
 
-.brideContent .inner .Wedding_Reservation a {
+.otherContent .inner .Wedding_Reservation a {
     display: inline-block;
     padding: 20px 60px;
 
