--- a/css/vip.css
+++ b/css/vip.css
@@ -123,7 +123,7 @@
 
 .weddingVisual {
     position: relative;
-    background: url(../img/wedding/weddingvisual01.jpg) no-repeat center center/cover;
+    background: url(../img/wedding/hall_visual01.jpg) no-repeat center center/cover;
     height: 55vh;
 }
 
@@ -154,7 +154,7 @@
     margin: 0 0 10px 0;
 }
 
-.hallVisual .inner p {
+.weddingVisual .inner p {
     font-size: 30px;
     font-weight: 700;
 }
@@ -191,20 +191,15 @@
 }
 
 
-
-.wedding_nav .inner li:nth-child(2) a {
+.wedding_nav .inner li:nth-child(4) a {
     background: #281e19;
     color: #fff;
     transition: 0.5s;
 }
 
-.wedding_nav .inner li:nth-child(n+3) a:hover,
-.wedding_nav .inner li:nth-child(1) a:hover {
+.wedding_nav .inner li:nth-child(n+5) a:hover,
+.wedding_nav .inner li:nth-child(-n+3) a:hover {
     background: #f1f1f1;
-}
-
-.wedding_nav .inner li:nth-child(n+3) a {
-    background: #fff;
 }
 
 .wedding_nav .flex_inner {
@@ -265,9 +260,8 @@
     word-break: keep-all;
 }
 
-.brideContent {}
 
-.brideContent h2 {
+.vipContent h2 {
     position: relative;
 
     font-family: 'Cormorant Upright', serif;
@@ -280,7 +274,7 @@
 }
 
 
-.brideContent h2::before {
+.vipContent h2::before {
     content: "";
     position: absolute;
     display: block;
@@ -292,11 +286,11 @@
     background: #dcbe96;
 }
 
-.brideContent h2::after {
+.vipContent h2::after {
     content: "";
     display: block;
     position: absolute;
-
+    display: block;
     bottom: -30%;
     left: 50%;
     transform: translate(-50%, 50%) rotate(-45deg);
@@ -306,7 +300,7 @@
     background: #dcbe96;
 }
 
-.brideContent p {
+.vipContent p {
     text-align: center;
 
     font-size: 20px;
@@ -315,20 +309,21 @@
     margin: 0 0 30px 0;
 }
 
-.brideContent .inner .bride_slide {
+
+.vipContent .inner .vip_slide {
     position: relative;
     width: 100%;
     height: 650px;
     margin: 0 0 30px 0;
 }
 
-.brideContent .inner .bride_slide figure {
+.vipContent .inner .vip_slide figure {
     font-size: 0;
 }
 
 
 
-.brideContent .inner .bride_slide .slick-prev {
+.vipContent .inner .vip_slide .slick-prev {
     position: absolute;
     top: 50%;
     left: 5%;
@@ -347,7 +342,7 @@
     z-index: 99;
 }
 
-.brideContent .inner .bride_slide .slick-next {
+.vipContent .inner .vip_slide .slick-next {
     position: absolute;
     top: 50%;
     right: 5%;
@@ -366,14 +361,14 @@
     z-index: 99;
 }
 
-.brideContent .inner .bride_slide .slick-dots {
+.vipContent .inner .vip_slide .slick-dots {
     position: absolute;
     top: 90%;
     left: 50%;
     transform: translate(-50%, 0);
 }
 
-.brideContent .inner .bride_slide .slick-dots li {
+.vipContent .inner .vip_slide .slick-dots li {
     display: inline-block;
     margin: 0 10px 0 0;
     border-radius: 50%;
@@ -385,45 +380,37 @@
     cursor: pointer;
 }
 
-.brideContent .inner .bride_slide .slick-dots li:last-child {
+.vipContent .inner .vip_slide .slick-dots li:last-child {
     margin: 0;
 }
 
-.brideContent .inner .bride_slide .slick-dots li button {
+.vipContent .inner .vip_slide .slick-dots li button {
     display: none;
 }
 
-.brideContent .inner .bride_slide .slick-dots li.slick-active {
+.vipContent .inner .vip_slide .slick-dots li.slick-active {
     background: #fff;
 }
 
-.brideContent .inner .bride_slide figure {
+.vipContent .inner .vip_slide figure {
     height: 650px;
 }
 
-.brideContent .inner .bride_slide .slide01 {
-    background: url(../img/wedding/bride_slide01.jpg) no-repeat center bottom/cover;
+.vipContent .inner .vip_slide .slide01 {
+    background: url(../img/wedding/vip_slide01.jpg) no-repeat center bottom/cover;
 
 }
 
-.brideContent .inner .bride_slide .slide02 {
-    background: url(../img/wedding/bride_slide02.jpg) no-repeat center bottom/cover;
-}
-
-.brideContent .inner .bride_slide .slide03 {
-    background: url(../img/wedding/bride_slide03.jpg) no-repeat center center/cover;
-}
-
-.brideContent .inner .bride_slide .slide04 {
-    background: url(../img/wedding/bride_slide04.jpg) no-repeat center center/cover;
+.vipContent .inner .vip_slide .slide02 {
+    background: url(../img/wedding/vip_slide02.jpg) no-repeat center bottom/cover;
 }
 
 
-.brideContent .inner .Wedding_Reservation {
+.vipContent .inner .Wedding_Reservation {
     text-align: center;
 }
 
-.brideContent .inner .Wedding_Reservation a {
+.vipContent .inner .Wedding_Reservation a {
     display: inline-block;
     padding: 20px 60px;
 
