--- a/css/main.css
+++ b/css/main.css
@@ -133,10 +133,23 @@
     position: relative;
 }
 
+.mainVisual .mainSlide_bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80vh;
+
+    background: rgba(0, 0, 0, 0.3);
+
+    z-index: 2;
+}
+
+
 .mainVisual .mainSlide .m_slider {
     position: absolute;
 
-    height: 90vh;
+    height: 80vh;
 
     z-index: 1;
 
@@ -176,7 +189,7 @@
     color: #fff;
     text-shadow: 1px 1px 3px #333;
 
-    z-index: 999;
+    z-index: 9999;
 }
 
 .mainVisual .visualText_box .visual_top {
@@ -188,7 +201,7 @@
 }
 
 .mainVisual .visualText_box .visual_bottom h2 {
-    font-size: 150px;
+    font-size: 100px;
     font-weight: 700;
     margin: 0 30px 0 0;
 
@@ -200,7 +213,7 @@
 
 .brandStory .brandText_box .txtbox_top {
     font-style: italic;
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 500;
     line-height: 40px;
     margin: 10px 0 10px 0;
@@ -403,6 +416,8 @@
     transition: 1.5s;
 }
 
+.mainContetn .flex_inner .conImg_box a {}
+
 .mainContetn .flex_inner .conImg_box:hover img {
     transform: scale(1.2);
 }
@@ -425,7 +440,7 @@
     background: rgba(0, 0, 0, 0.4);
 }
 
-.mainContetn .flex_inner .conImg_box:nth-child(1) {
+.mainContetn .flex_inner a:nth-child(1) {
     flex: 1 0 10%;
 }
 
