--- a/css/main.css
+++ b/css/main.css
@@ -215,7 +215,7 @@
     font-style: italic;
     font-size: 25px;
     font-weight: 500;
-    line-height: 40px;
+    line-height: 1.3;
     margin: 10px 0 10px 0;
     color: #111;
 }
@@ -231,7 +231,7 @@
 .brandStory .brandText_box .txtbox_bottom {
     font-size: 17px;
     font-weight: 300;
-    line-height: 20px;
+    line-height: 1.3;
     margin: 0 0 20px 0;
     color: #333;
 }
