--- a/css/main.css
+++ b/css/main.css
@@ -213,7 +213,7 @@
 
 .brandStory .brandText_box .txtbox_top {
     font-style: italic;
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 500;
     line-height: 1.3;
     margin: 10px 0 10px 0;
@@ -222,15 +222,15 @@
 
 .brandStory .brandText_box .txtbox_middle {
     font-size: 20px;
-    font-weight: 500;
-    line-height: 30px;
+    font-weight: 300;
+    line-height: 1.3;
     margin: 0 0 15px 0;
     color: #222;
 }
 
 .brandStory .brandText_box .txtbox_bottom {
     font-size: 17px;
-    font-weight: 300;
+    font-weight: 100;
     line-height: 1.3;
     margin: 0 0 20px 0;
     color: #333;
