--- a/css/main.css
+++ b/css/main.css
@@ -566,6 +566,7 @@
     font-size: 17px;
     font-weight: 300;
     margin: 0 0 30px 0;
+    line-height: 1.2;
 }
 
 .event_box .eveText_box .event_date {
@@ -606,7 +607,7 @@
     position: relative;
     padding: 15px;
 
-    border: 2px solid #ddd;
+    border: 1px solid #f1f1f1;
 }
 
 .weddingArea .flex_inner .reservation,
